@@ -1,3 +1,4 @@
+- NEW: Files can be dragged to new changelists. (Stefan)
 - BUG: <SHIFT>-F5 and <CTRL>-F5 not working in log view (Stefan Fuhrmann)
 - BUG: The property page showed the changelist instead of the GUUID. (Stefan)
 - BUG: Revisions that only added new files or sub-folders
